добавил АПИ с resource API
