# app/Http/Controllers/Api/ApiController.php
@@ -7,19 +7,5 @@ use Illuminate\Http\Request;
 
 class ApiController extends Controller
 {
-    /**
-     * @OA\Get(
-     *      path="/api/example",
-     *      summary="Пример запроса",
-     *      description="Получение примера",
-     *      @OA\Response(
-     *          response=200,
-     *          description="Успешный ответ"
-     *      )
-     * )
-     */
-    public function example()
-    {
-        return response()->json(['message' => 'Пример данных']);
-    }
+
 }
